# shadow-futures

./: README.md  pyproject.toml
figures/: mi_experiment_results.csv  shadow_futures_simulations.csv  shadow_futures_simulations_T100_a1.5_agent10_n500.csv  shadow_futures_summary_T100_a1.5_agent10_n200.csv  shadow_futures_summary_T100_a1.5_agent10_n500.csv  simulation_agents.csv  simulation_reward_history.csv  simulation_summary.csv
src/shadow_futures/: __init__.py  __main__.py  cli.py  metrics.py  plots.py  process.py  run.py  simulate.py
src/shadow_futures.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_metrics.py  test_process.py
